--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "devDependencies": {
     "admin-lte": "^3.0.0-alpha.2",
     "axios": "^0.16.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "bootstrap-notify": "^3.1.3",
     "bootstrap-sass": "^3.3.7",
+    "chart.js": "^2.7.2",
     "cross-env": "^5.0.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "laravel-mix": "^1.0",
     "vue": "^2.1.10",
     "vue-router": "^3.0.1"
-  }
+  },
+  "dependencies": {}
 }
